src/test/test-models/bad/data_index/non_data_index14.stan
parameters {
  real y[3];

}
transformed parameters {
  cov_matrix[size(y)] z;
}
